--- a/force-app/main/default/classes/AccountDetails.cls
+++ b/force-app/main/default/classes/AccountDetails.cls
@@ -1,8 +1,8 @@
-public with sharing class AccountController {
+public with sharing class AccountDetails {
     @AuraEnabled(cacheable=true)
-    public static List<Account> getAccounts(){
+    public static Account getAccountData(){
         try{
-            return [SELECT Id, Name, Industry, Phone FROM Account LIMIT 10];
+            return [SELECT Id, Name, Industry, Phone FROM Account LIMIT 1];
         } catch(Exception e){
             throw new AuraHandledException('Error fetching Accounts:' + e.getMessage());
         }
